--- a/index.html
+++ b/index.html
@@ -14,50 +14,13 @@
 <!-- HOME -->
         <div id="home" class="w-box homeContent">
             <div class="w-box heroSection">
-                <img alt="" width="4008" height="3821" src="images/DSC02857.jpg" class="w-image heroImage" sizes="100vw"
-                    srcset="
-                                images/DSC02857.jpg 16w,
-                                images/DSC02857.jpg 32w,
-                                images/DSC02857.jpg 48w,
-                                images/DSC02857.jpg 64w,
-                                images/DSC02857.jpg 96w,
-                                images/DSC02857.jpg 128w,
-                                images/DSC02857.jpg 256w,
-                                images/DSC02857.jpg 384w,
-                                images/DSC02857.jpg 640w,
-                                images/DSC02857.jpg 750w,
-                                images/DSC02857.jpg 828w,
-                                images/DSC02857.jpg 1080w,
-                                images/DSC02857.jpg 1200w,
-                                images/DSC02857.jpg 1920w,
-                                images/DSC02857.jpg 2048w,
-                                images/DSC02857.jpg 3840w
-                " decoding="async" loading="eager" />
+                <img alt="" src="images/DSC02857.jpg" class="w-image heroImage" decoding="async" loading="eager" />
             </div>
-            <div class="w-box heroShadow">
-            </div>
-            <div class="w-box heroTitle">
-                <img alt="" width="3067" height="1068" src="images/eclettica_oro.svg" class="w-image heroTitleImage"
-                    sizes="100vw" srcset="
-                    images/eclettica_oro.svg 32w,
-                    images/eclettica_oro.svg 48w,
-                    images/eclettica_oro.svg 64w,
-                    images/eclettica_oro.svg 96w,
-                    images/eclettica_oro.svg 128w,
-                    images/eclettica_oro.svg 256w,
-                    images/eclettica_oro.svg 384w,
-                    images/eclettica_oro.svg 640w,
-                    images/eclettica_oro.svg 750w,
-                    images/eclettica_oro.svg 828w,
-                    images/eclettica_oro.svg 1080w,
-                    images/eclettica_oro.svg 1200w,
-                    images/eclettica_oro.svg 1920w,
-                    images/eclettica_oro.svg 2048w,
-                    images/eclettica_oro.svg 3840w
-                " decoding="async" loading="eager" />
-                <h1 class="w-heading heroTitleText">
-                    dal 1965
-                </h1>
+            <div class="w-box heroOverlay">
+                <div class="w-box heroTitle">
+                    <img alt="" src="images/eclettica_oro.svg" class="w-image heroTitleImage" decoding="async" loading="eager" />
+                    <h1 class="w-heading heroTitleText">dal 1965</h1>
+                </div>
             </div>
 
             <!-- NAVBAR -->
