--- a/index.html
+++ b/index.html
@@ -24,38 +24,33 @@
             </div>
 
             <!-- NAVBAR -->
-            <div class="w-box navbar">
-                <a class="w-link"><img alt="" width="1008" height="889" src="images/giusy.png" class="w-image navbarLogo" sizes="100vw"
-                        srcset="
-                                images/giusy.png 16w,
-                                images/giusy.png 32w,
-                                images/giusy.png 48w,
-                                images/giusy.png 64w,
-                                images/giusy.png 96w,
-                                images/giusy.png 128w,
-                                images/giusy.png 256w,
-                                images/giusy.png 384w,
-                                images/giusy.png 640w,
-                                images/giusy.png 750w,
-                                images/giusy.png 828w,
-                                images/giusy.png 1080w,
-                                images/giusy.png 1200w,
-                                images/giusy.png 1920w,
-                                images/giusy.png 2048w,
-                                images/giusy.png 3840w
-                            " decoding="async" loading="eager" />
+            <nav class="navbar">
+                <a href="#home" class="navbarLogo">
+                    <img alt="Eclettica Logo" src="images/giusy.png" class="navbarLogoImage" />
                 </a>
-                <button type="button" class="w-button navbarMenu" data-state="closed" onclick="toggleMenu()">
-                    <div class="w-html-embed">
-                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100%" height="100%" viewBox="0 0 72 72">
-                            <path fill="currentColor"
-                                d="M56 48c2.209 0 4 1.791 4 4 0 2.209-1.791 4-4 4-1.202 0-38.798 0-40 0-2.209 0-4-1.791-4-4 0-2.209 1.791-4 4-4C17.202 48 54.798 48 56 48zM56 32c2.209 0 4 1.791 4 4 0 2.209-1.791 4-4 4-1.202 0-38.798 0-40 0-2.209 0-4-1.791-4-4 0-2.209 1.791-4 4-4C17.202 32 54.798 32 56 32zM56 16c2.209 0 4 1.791 4 4 0 2.209-1.791 4-4 4-1.202 0-38.798 0-40 0-2.209 0-4-1.791-4-4 0-2.209 1.791-4 4-4C17.202 16 54.798 16 56 16z">
-                            </path>
-                        </svg>
-                    </div>
+                <button type="button" class="navbarMenu" onclick="toggleMenu()">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 72 72">
+                        <path fill="currentColor" d="M56 48c2.209 0 4 1.791 4 4 0 2.209-1.791 4-4 4-1.202 0-38.798 0-40 0-2.209 0-4-1.791-4-4 0-2.209 1.791-4 4-4C17.202 48 54.798 48 56 48zM56 32c2.209 0 4 1.791 4 4 0 2.209-1.791 4-4 4-1.202 0-38.798 0-40 0-2.209 0-4-1.791-4-4 0-2.209 1.791-4 4-4C17.202 32 54.798 32 56 32zM56 16c2.209 0 4 1.791 4 4 0 2.209-1.791 4-4 4-1.202 0-38.798 0-40 0-2.209 0-4-1.791-4-4 0-2.209 1.791-4 4-4C17.202 16 54.798 16 56 16z"/>
+                    </svg>
                 </button>
-            </div>
+            </nav>
         </div>
+
+<!-- OPEN MENU -->
+<div id="sideMenu" class="side-menu">
+    <button class="close-btn" onclick="toggleMenu()">
+        <div class="w-html-embed">
+            <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <line x1="18" y1="6" x2="6" y2="18"></line>
+                <line x1="6" y1="6" x2="18" y2="18"></line>
+            </svg>
+        </div>
+    </button>
+    <a href="#home">HOME</a>
+    <a href="#about">ABOUT ME</a>
+    <a href="#contacts">CONTACTS</a>
+</div>
 
 <!-- ABOUT ME -->
         <div id="about" class="w-box aboutExternContent">
@@ -165,22 +160,6 @@
             </div>
         </div>
 
-<!-- OPEN MENU -->
-        <div id="sideMenu" class="side-menu">
-            <button class="close-btn" onclick="toggleMenu()">
-                <div class="w-html-embed">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <line x1="18" y1="6" x2="6" y2="18"></line>
-                        <line x1="6" y1="6" x2="18" y2="18"></line>
-                    </svg>
-                </div>
-            </button>
-            <a href="#home">HOME</a>
-            <a href="#about">ABOUT ME</a>
-            <a href="#contacts">CONTACTS</a>
-        </div>
-
 <!-- FOOTER -->
         <div class="w-box footerExternContent">
             <div class="w-box footerInnerContent">
@@ -285,6 +264,34 @@
                     }
                 }
             });
+        });
+
+        let lastScrollY = window.scrollY;
+        let ticking = false;
+
+        function updateNavbar() {
+            const navbar = document.querySelector('.navbar');
+            
+            // Scrolling down
+            if (lastScrollY < window.scrollY) {
+                navbar.classList.add('hidden');
+            } 
+            // Scrolling up
+            else {
+                navbar.classList.remove('hidden');
+            }
+
+            lastScrollY = window.scrollY;
+            ticking = false;
+        }
+
+        window.addEventListener('scroll', () => {
+            if (!ticking) {
+                window.requestAnimationFrame(() => {
+                    updateNavbar();
+                });
+                ticking = true;
+            }
         });
     </script>
 </body>
