--- a/index.html
+++ b/index.html
@@ -272,25 +272,18 @@
         function updateNavbar() {
             const navbar = document.querySelector('.navbar');
             
-            // Se siamo all'inizio della pagina, mostra sempre la navbar
-            if (window.scrollY === 0) {
-                navbar.classList.remove('hidden');
-                return;
-            }
-            
-            // Altrimenti, applica la logica dello scroll
+            // Scrolling down
             if (lastScrollY < window.scrollY) {
                 navbar.classList.add('hidden');
-            } else {
+            } 
+            // Scrolling up
+            else {
                 navbar.classList.remove('hidden');
             }
 
             lastScrollY = window.scrollY;
             ticking = false;
         }
-
-        // Controlla la posizione iniziale
-        updateNavbar();
 
         window.addEventListener('scroll', () => {
             if (!ticking) {
