--- a/contacts.html
+++ b/contacts.html
@@ -76,7 +76,7 @@
         <div class="contacts-content" style="margin-top: 80px;">
             <div class="contact-top">
                 <div class="contact-left">
-                    <img src="images/negozio.png" alt="Negozio Eclettica" class="contact-image">
+                    <img src="images/negozio.JPG" alt="Negozio Eclettica" class="contact-image">
                 </div>
                 <div class="contact-right">
                     <!-- Sezione contatti -->
