--- a/contacts.html
+++ b/contacts.html
@@ -42,7 +42,9 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Great+Vibes&display=swap" rel="stylesheet">
     
     <!-- Styles -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styleIndex.css">
+    <link rel="stylesheet" href="css/styleContacts.css">
+
 </head>
 <body class="w-body bodyContent">
     <div class="w-box bodyInnerContent">
@@ -73,7 +75,7 @@
         </div>
 
         <!-- CONTACTS CONTENT -->
-        <div class="contacts-content" style="margin-top: 80px;">
+        <div class="contacts-content" >
             <div class="contact-top">
                 <div class="contact-left">
                     <img src="images/negozio.JPG" alt="Negozio Eclettica" class="contact-image">
