--- a/contacts.html
+++ b/contacts.html
@@ -75,73 +75,67 @@
         </div>
 
         <!-- CONTACTS CONTENT -->
-        <div class="contacts-content" >
-            <div class="contact-top">
-                <div class="contact-left">
-                    <img src="images/negozio.JPG" alt="Negozio Eclettica" class="contact-image">
-                </div>
-                <div class="contact-right">
-                    <!-- Sezione contatti -->
-                    <section class="contact-section">
-                        <h2 class="section-title">Contattaci</h2>
-                        <div class="contact-methods">
-                            <a href="https://www.instagram.com/eclettica___/" class="contact-method" target="_blank">
-                                <i class="contact-icon">Instagram</i>
-                                <span class="contact-label">@eclettica___</span>
-                            </a>
-                            <a href="https://www.facebook.com/giusy.porru.3/" class="contact-method" target="_blank">
-                                <i class="contact-icon">Facebook</i>
-                                <span class="contact-label">Giusy Porru</span>
-                            </a>
-                            <a href="mailto:giusy.porru@libero.it" class="contact-method">
-                                <i class="contact-icon">Email</i>
-                                <span class="contact-label">giusy.porru@libero.it</span>
-                            </a>
-                        </div>
-                    </section>
-                </div>
+        <div class="contacts-content">
+            <div class="contacts-left">
+                <img src="images/negozio.JPG" alt="Negozio Eclettica" class="contact-image">
             </div>
-            <div class="contact-bottom">
-                <div class="contact-left">
-                    <!-- Mappa -->
-                    <section class="map-section">
-                        <h2 class="section-title">Dove siamo</h2>
-                        <div class="map-container">
-                            <iframe 
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.9303010444736!2d9.319570676891752!3d45.35671177107373!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786c4e04f0c3ee1%3A0x6a7c47e5c6c42dd1!2sVia%20Conciliazione%2C%2026%2C%2020077%20Melegnano%20MI!5e0!3m2!1sen!2sit!4v1689241427428!5m2!1sen!2sit"
-                                width="100%" 
-                                height="450" 
-                                style="border:0;" 
-                                allowfullscreen="" 
-                                loading="lazy" 
-                                referrerpolicy="no-referrer-when-downgrade">
-                            </iframe>
+            <div class="contacts-right">
+                <!-- Sezione contatti -->
+                <section class="contact-section">
+                    <h2 class="section-title">Contattaci</h2>
+                    <div class="contact-methods">
+                        <a href="https://www.instagram.com/eclettica___/" class="contact-method" target="_blank">
+                            <i class="contact-icon">Instagram</i>
+                            <span class="contact-label">@eclettica___</span>
+                        </a>
+                        <a href="https://www.facebook.com/giusy.porru.3/" class="contact-method" target="_blank">
+                            <i class="contact-icon">Facebook</i>
+                            <span class="contact-label">Giusy Porru</span>
+                        </a>
+                        <a href="mailto:giusy.porru@libero.it" class="contact-method">
+                            <i class="contact-icon">Email</i>
+                            <span class="contact-label">giusy.porru@libero.it</span>
+                        </a>
+                    </div>
+                </section>
+
+                <!-- Orari -->
+                <section class="hours-section">
+                    <h2 class="section-title">Orari di apertura</h2>
+                    <div class="store-hours">
+                        <div class="hours-row">
+                            <span class="day">Lunedì - Venerdì</span>
+                            <span class="time">9:30 - 12:30 | 15:30 - 19:00</span>
                         </div>
-                        <div class="address">
-                            <p>Via Conciliazione, 26, 20077 Melegnano (MI)</p>
+                        <div class="hours-row">
+                            <span class="day">Sabato</span>
+                            <span class="time">9:30 - 12:30</span>
                         </div>
-                    </section>
-                </div>
-                <div class="contact-right">
-                    <!-- Orari di apertura -->
-                    <section class="hours-section">
-                        <h2 class="section-title">Orari di apertura</h2>
-                        <div class="store-hours">
-                            <div class="hours-row">
-                                <span class="day">Lunedì - Venerdì</span>
-                                <span class="time">9:30 - 12:30 | 15:30 - 19:00</span>
-                            </div>
-                            <div class="hours-row">
-                                <span class="day">Sabato</span>
-                                <span class="time">9:30 - 12:30</span>
-                            </div>
-                            <div class="hours-row">
-                                <span class="day">Domenica</span>
-                                <span class="time">Chiuso</span>
-                            </div>
+                        <div class="hours-row">
+                            <span class="day">Domenica</span>
+                            <span class="time">Chiuso</span>
                         </div>
-                    </section>
-                </div>
+                    </div>
+                </section>
+                
+                <!-- Mappa -->
+                <section class="map-section">
+                    <h2 class="section-title">Dove siamo</h2>
+                    <div class="map-container">
+                        <iframe 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.9303010444736!2d9.319570676891752!3d45.35671177107373!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786c4e04f0c3ee1%3A0x6a7c47e5c6c42dd1!2sVia%20Conciliazione%2C%2026%2C%2020077%20Melegnano%20MI!5e0!3m2!1sen!2sit!4v1689241427428!5m2!1sen!2sit"
+                            width="100%" 
+                            height="450" 
+                            style="border:0;" 
+                            allowfullscreen="" 
+                            loading="lazy" 
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                    </div>
+                    <div class="address">
+                        <p>Via Conciliazione, 26, 20077 Melegnano (MI)</p>
+                    </div>
+                </section>               
             </div>
         </div>
     </div>
