--- a/contacts.html
+++ b/contacts.html
@@ -50,7 +50,7 @@
     <div class="w-box bodyInnerContent">
         <!-- NAVBAR -->
         <nav class="navbar" role="navigation" aria-label="Menu principale">
-            <a href="#home" class="navbarLogo" aria-label="Torna alla home">
+            <a href="index.html#home" class="navbarLogo" aria-label="Torna alla home">
                 <img alt="Eclettica Logo" src="images/logo_giusy_oro.png" class="navbarLogoImage gold" />
                 <img alt="Eclettica Logo" src="images/logo_giusy_bianco.png" class="navbarLogoImage white" />
             </a>
