--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Great+Vibes&family=Satisfy&display=swap" rel="stylesheet">
     
+
     <!-- Styles -->
     <link rel="stylesheet" href="css/styleIndex.css">
 
