--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
     
     <!-- Preload -->
     <link rel="preload" href="fonts/DMSans-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/DMSans-Regular.woff" as="font" type="font/woff" crossorigin>
     <link rel="preload" href="fonts/DMSans-Medium.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/DMSans-Medium.woff" as="font" type="font/woff" crossorigin>
     <link rel="preload" href="fonts/DMSans-Bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/DMSans-Bold.woff" as="font" type="font/woff" crossorigin>
     <link rel="preload" href="fonts/Satisfy-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/Satisfy-Regular.woff" as="font" type="font/woff" crossorigin>
     <link rel="preload" href="css/styleIndex.css" as="style">
     <link rel="preload" href="images/hero_image.webp" as="image">
     <link rel="preload" href="images/eclettica_oro.svg" as="image">
