--- a/contacts.html
+++ b/contacts.html
@@ -204,17 +204,17 @@
                             </div>
                             <span class="contact-label">@eclettica___</span>
                         </a>
-                        <a href="mailto:giusy.porru@libero.it" 
+                        <a href="mailto:giusiporru@gmail.com" 
                            class="contact-method"
                            role="listitem"
-                           aria-label="Invia email a giusy.porru@libero.it">
+                           aria-label="Invia email a giusiporru@gmail.com">
                             <div class="contact-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                     <circle cx="12" cy="12" r="4"></circle>
                                     <path d="M16 8v5a3 3 0 0 0 6 0v-1a10 10 0 1 0-3.92 7.94"></path>
                                 </svg>
                             </div>
-                            <span class="contact-label">giusy.porru@libero.it</span>
+                            <span class="contact-label">giusiporru@gmail.com</span>
                         </a>
                     </div>
                 </section>
