--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                         </div>
                         <div style="display: contents">
                             <div style="display: contents">
-                                <a href="mailto:giusy.porru@libero.it?subject=richiesta+di+informazioni+da+eclettica.design"
+                                <a href="mailto:giusiporru@gmail.com?subject=richiesta+di+informazioni+da+eclettica.design"
                                     class="w-link iconBox" aria-label="Inviaci una email">
                                     <div class="w-html-embed">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 24 24" fill="none" stroke="currentColor"
